# datajoint-file-validator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: docs.yaml  pypi.yaml  test.yaml  tox.yaml
datajoint_file_validator/: __init__.py  base_settings.py  cli.py  config.py  error.py  hash_utils.py  log.py  main.py  manifest.py  manifest_validator.py  path_utils.py  query.py  registry.py  result.py  rule.py  snapshot.py  validate.py  yaml.py
datajoint_file_validator/constraint/: __init__.py
datajoint_file_validator/manifest_schemas/: default.yaml  latest.yaml  minimal.yaml  rule.yaml  rules.yaml  v0.1.0.yaml
datajoint_file_validator/manifest_schemas/parts/: rule.yaml
datajoint_file_validator/manifests/: demo_bob_lab_frames_v0.1.yaml  demo_dlc.yaml  demo_dlc_v0.1.yaml  demo_rnaseq  demo_rnaseq.yaml  demo_rnaseq_v0.1.yaml
datajoint_file_validator/manifests/demo_dlc/: default.yaml  v0.1.yaml
datajoint_file_validator/manifests/demo_tutorial/: default.yaml  v1.yaml
docs/: contribute.md  index.md  installation.md  quick_start.md  usage.md
docs/.overrides/assets/stylesheets/: extra.css
docs/PULL_REQUEST_TEMPLATE/: new_manifest.md
docs/api/: base_settings.md  config.md  index.md  main.md  manifest.md  query.md  registry.md  rule.md  snapshot.md
docs/snippets/: manifest_schemas  manifests  my_type.yaml
docs/src/: filesets  manifest_schemas
docs/tutorial/: 1-validate.md  2-manifest.md  3-publish.md  index.md
tests/: conftest.py  test_base_settings.py  test_basic_validate.py  test_cli.py  test_constraint.py  test_fileset_validate.py  test_import.py  test_manifest.py  test_path_utils.py  test_query.py  test_registry.py  test_rule.py  test_snapshot.py
tests/data/filesets/fileset2/: other_ref.fasta
