[tool.poetry]
name = "datajoint-file-validator"
version = "0.0.1"
description = "A tool to validate DataJoint files and filesets"
authors = ["Ethan Ho <***REMOVED***>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
cerberus = "^1.3.5"
typer = {version = "^0.9.0", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
