[tool.poetry]
name = "datajoint-file-validator"
version = "0.0.1"
description = "A tool to validate DataJoint files and filesets"
authors = ["Ethan Ho <***REMOVED***>"]
license = "MIT"
include = [
    { path = "manifests", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = ">=3.8"
cerberus = "^1.3.5"
typer = {version = "^0.9.0", extras = ["all"]}
pyyaml = "^6.0.1"
pytz = "^2023.3.post1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-dotenv = "^0.5.2"

[tool.poetry.scripts]
datajoint-file-validator = "datajoint_file_validator.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
